<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0"
         xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
    <modelVersion>4.0.0</modelVersion>

    <groupId>com.netgrif</groupId>
    <artifactId>application-engine-parent</artifactId>
    <version>7.0.0-RC9</version>
    <packaging>pom</packaging>

    <name>NETGRIF Application Engine parent</name>
    <description>System provides workflow management functions including user, role and data management.</description>
    <url>https://engine.netgrif.com</url>

    <modules>
        <module>nae-object-library</module>
        <module>nae-spring-core-adapter</module>
        <module>nae-user-common</module>
        <module>nae-user-ce</module>
        <module>application-engine</module>
    </modules>

    <licenses>
        <license>
            <name>NETGRIF Community License</name>
            <url>https://netgrif.com/license</url>
            <distribution>repo</distribution>
        </license>
    </licenses>

    <organization>
        <name>NETGRIF, s.r.o.</name>
        <url>https://netgrif.com</url>
    </organization>

    <developers>
        <developer>
            <name>Netgrif</name>
            <email>oss@netgrif.com</email>
            <organization>NETGRIF, s.r.o.</organization>
            <organizationUrl>https://netgrif.com</organizationUrl>
        </developer>
    </developers>

    <scm>
        <connection>scm:git:git://github.com/netgrif/application-engine.git</connection>
        <developerConnection>scm:git:ssh://git@github.com/netgrif/application-engine.git</developerConnection>
        <url>https://github.com/netgrif/application-engine</url>
    </scm>

    <issueManagement>
        <system>GitHub</system>
        <url>https://github.com/netgrif/application-engine/issues</url>
    </issueManagement>

    <properties>
        <java.version>21</java.version>
        <maven.compiler.source>21</maven.compiler.source>
        <maven.compiler.target>21</maven.compiler.target>
        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
        <project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
        <groovy.version>4.0.21</groovy.version>
        <lombok.version>1.18.36</lombok.version>
        <jakarta.validation.version>3.0.2</jakarta.validation.version>
        <jakarta.annotation.version>2.1.1</jakarta.annotation.version>
        <jakarta.bind.version>4.0.2</jakarta.bind.version>
        <junit-jupiter.version>5.11.4</junit-jupiter.version>
        <bson.version>5.2.1</bson.version>
        <spring.boot.version>3.4.4</spring.boot.version>
        <jackson.version>2.17.1</jackson.version>
        <mapstruct.version>1.5.5.Final</mapstruct.version>
        <querydsl.version>5.0.0</querydsl.version>
        <protobuf.version>4.27.0</protobuf.version>
        <grpc.version>1.64.0</grpc.version>
        <sonar.organization>netgrif-oss</sonar.organization>
        <sonar.host.url>https://sonarcloud.io</sonar.host.url>
    </properties>

    <repositories>
        <repository>
            <id>oss.snapshots</id>
            <name>OSSRH SNAPSHOT</name>
            <url>https://s01.oss.sonatype.org/content/repositories/snapshots</url>
            <releases>
                <enabled>false</enabled>
            </releases>
            <snapshots>
                <enabled>true</enabled>
            </snapshots>
        </repository>
        <repository>
            <id>mvnrepository1</id>
            <url>https://maven.imagej.net/content/repositories/public/</url>
        </repository>
        <repository>
            <id>mvnrepository2</id>
            <url>https://repo.spring.io/plugins-release/</url>
        </repository>
        <repository>
            <id>mulesoft</id>
            <url>https://repository.mulesoft.org/nexus/content/repositories/public/</url>
        </repository>
    </repositories>

    <build>
        <extensions>
            <extension>
                <groupId>kr.motd.maven</groupId>
                <artifactId>os-maven-plugin</artifactId>
                <version>1.7.1</version>
            </extension>
        </extensions>
        <plugins>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-compiler-plugin</artifactId>
                <version>3.11.0</version>
                <configuration>
                    <compilerArgument>-parameters</compilerArgument>
                    <source>${java.version}</source>
                    <target>${java.version}</target>
                </configuration>
            </plugin>

            <!-- Generovanie source code -->
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-source-plugin</artifactId>
                <version>3.2.1</version>   <!-- Bug doesnt work with 3.3.x -->
                <executions>
                    <execution>
                        <id>attach-sources</id>
                        <goals>
                            <goal>jar-no-fork</goal>
                        </goals>
                    </execution>
                </executions>
            </plugin>

            <!-- Generovanie Javadoc -->
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-javadoc-plugin</artifactId>
                <version>3.11.2</version>
                <executions>
                    <execution>
                        <id>attach-javadocs</id>
                        <goals>
                            <goal>jar</goal>
                        </goals>
                        <phase>package</phase>
                    </execution>
                </executions>
                <configuration>
                    <source>${java.version}</source>
                    <doclint>none</doclint>
                    <detectJavaApiLink>false</detectJavaApiLink>
                    <failOnWarnings>false</failOnWarnings>
                    <quiet>true</quiet>
                    <sourcepath>
                        src/main/java;target/generated-sources/groovy-stubs/main;target/generated-sources/java
                    </sourcepath>
                    <additionalOptions>
                        <additionalOption>-Xdoclint:none</additionalOption>
                        <additionalOption>--ignore-source-errors</additionalOption>
                    </additionalOptions>
                </configuration>
            </plugin>
        </plugins>
    </build>

    <profiles>
        <profile>
            <id>github-publish</id>
            <distributionManagement>
                <repository>
                    <id>github</id>
                    <name>GitHub Packages</name>
                    <url>https://maven.pkg.github.com/netgrif/application-engine</url>
                </repository>
            </distributionManagement>
        </profile>
        <profile>
            <id>ossrh-publish</id>
            <distributionManagement>
                <repository>
                    <id>central</id>
                    <name>Central Repository OSSRH</name>
                    <url>https://central.sonatype.com/</url>
                </repository>
                <snapshotRepository>
                    <id>central</id>
                    <name>Central Repository OSSRG Snapshots</name>
                    <url>https://central.sonatype.com/repository/maven-snapshots/</url>
                </snapshotRepository>
            </distributionManagement>
            <build>
                <plugins>
                    <plugin>
                        <groupId>org.sonatype.central</groupId>
                        <artifactId>central-publishing-maven-plugin</artifactId>
                        <version>0.8.0</version>
                        <extensions>true</extensions>
                        <configuration>
                            <publishingServerId>central</publishingServerId>
                            <checksums>required</checksums>
                        </configuration>
                    </plugin>
                    <plugin>
                        <groupId>org.apache.maven.plugins</groupId>
                        <artifactId>maven-gpg-plugin</artifactId>
                        <version>1.5</version>
                        <executions>
                            <execution>
                                <id>sign-artifacts</id>
                                <phase>verify</phase>
                                <goals>
                                    <goal>sign</goal>
                                </goals>
                            </execution>
                        </executions>
                        <configuration>
                            <gpgArguments>
                                <arg>--pinentry-mode</arg>
                                <arg>loopback</arg>
                            </gpgArguments>
                        </configuration>
                    </plugin>
                </plugins>
            </build>
        </profile>
        <profile>
            <id>netgrif-nexus-publish</id>
            <distributionManagement>
                <repository>
                    <id>netgrif-nexus-releases</id>
                    <name>Netgrif Nexus OSS</name>
                    <url>https://nexus.netgrif.com/repository/maven-releases/</url>
                </repository>
                <snapshotRepository>
                    <id>netgrif-nexus-snapshots</id>
                    <name>Netgrif Nexus OSS Snapshots</name>
                    <url>https://nexus.netgrif.com/repository/maven-snapshots/</url>
                </snapshotRepository>
            </distributionManagement>
        </profile>
    </profiles>

</project>
